--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,19 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: KoRoNyA's Github blog
+email: koronya@hanmail.net
 description: > # this means to ignore newlines until "baseurl:"
+  This page is koronya's github blog page!
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: koroghost
+github_username:  koronya
+
+# paginate: 2
 
 # Build settings
 markdown: kramdown
