--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: koroghost
 github_username:  koronya
-
-# paginate: 2
+disqus:
+    shortname: koroghost
 
 # Build settings
 markdown: kramdown
