--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: koroghost
 github_username:  koronya
+google_analytics: UA-92918956-1
 disqus:
     shortname: koroghost
 
