--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: koroghost
 github_username:  koronya
+# highlighter: pygments
 google_analytics: UA-92918956-1
 disqus:
     shortname: koroghost
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
 gems:
   - jekyll-feed
 exclude:
